# NNVisualiser

./: LICENSE.txt  README.md  pyproject.toml
.github/workflows/: release.yml
src/: NNVisualiser.py  __init__.py
